Enhance Course Management: Add category filtering in course index, include category selection in course creation, and update course model to support categories. Update views to display categories and remove unused audio assets.

--- a/public/fe-template/index.html
+++ b/public/fe-template/index.html
@@ -912,7 +912,7 @@ Anggota Kelompok :
         </div>
       </div>
     </section>
-    <section class="bg-light pt-3 pb-5 px-3 px-sm-0 col-12">
+    <section class="bg-light pt-3 pb-5 px-3 px-sm-0 col-12" id="allCourses">
       <div class="container d-flex flex-wrap justify-content-center px-0">
         <h4 class="col-12 text-start mb-3" style="font-weight: 600">
           All Courses
